# Lab2

./: ArraySequence.h  CMakeLists.txt  Complex.h  DinamicArray.h  LinkedList.h  LinkedListSequence.h  Matrix.h  Sequence.h  SquareMatrix.h  main.cpp  menu.cpp  menu.h  tests.cpp
